# ecommerce-data-platform

./: .env.example  .gitignore  Dockerfile  Makefile  PORTFOLIO.md  README.md  docker-compose.yml  pyproject.toml
dags/: daily_batch_etl.py  data_quality_check.py
docs/dashboards/: capture-screenshots.js  data-platform-dashboard.html  generate_screenshots.py
docs/dashboards/screenshots/: README.md
kubernetes/: configmap.yaml  namespace.yaml  secrets.yaml
kubernetes/airflow/: helm-values.yaml
kubernetes/cdc-pipeline/: deployment.yaml
kubernetes/event-collector/: deployment.yaml  hpa.yaml  service.yaml
kubernetes/monitoring/: data-quality-cronjob.yaml  prometheus-values.yaml
portfolio/: PORTFOLIO.md  docker-compose.yml  index.html
portfolio/01_log_design/: event_schema.json  event_taxonomy.md  log_schema_guide.md
portfolio/02_metrics_definition/: metrics_dictionary.md
portfolio/02_metrics_definition/metrics_sql/: arppu.sql  dau.sql  retention.sql
portfolio/04_dbt_mart/: dbt_project.yml
portfolio/04_dbt_mart/tests/: assert_arppu_reasonable.sql  assert_revenue_not_negative.sql  assert_unique_transaction_id.sql
portfolio/05_sql_queries/: funnel_analysis.sql  retention_analysis.sql  revenue_analysis.sql
portfolio/06_dashboard/: generate_screenshots.py  quickpay-dashboard.html
portfolio/07_data_quality/: quality_runner.py  slack_alert.py
portfolio/07_data_quality/great_expectations/: great_expectations.yml
portfolio/08_airflow_dags/: daily_metrics_dag.py  quality_check_dag.py
scripts/: debezium-connector.json  init_db.sql
src/bigquery/: __init__.py  schema_manager.py
src/bigquery/queries/: funnel_analysis.sql  user_behavior.sql  (+1 more)
src/event_collector/: __init__.py  app.py  models.py  publisher.py
src/genai/: __init__.py  data_quality_agent.py  pipeline_doc_generator.py  sql_optimizer.py
src/observability/: __init__.py  metrics.py
src/pipelines/: __init__.py  batch_pipeline.py  cdc_realtime.py  event_pipeline.py
src/scripts/: event_generator.py
terraform/: bigquery.tf  gke.tf  iam.tf  main.tf  outputs.tf  pubsub.tf  variables.tf
terraform/environments/: dev.tfvars
tests/: test_event_collector.py  test_genai.py  test_pipelines.py
(+7 files in other folders)
